--- a/src/app/main-container/canvas/canvas.component.html
+++ b/src/app/main-container/canvas/canvas.component.html
@@ -1,3 +1,3 @@
-<div class="canvas-container row m-0" appDraggable (drop)="onDrop($event)">
-  <div class="canvas" #container></div>
+<div class="canvas-container row m-0" >
+  <div class="canvas" #container appDraggable (drop)="onDrop($event)"></div>
 </div>
