--- a/src/app/widgets/button/button.component.html
+++ b/src/app/widgets/button/button.component.html
@@ -1,1 +1,7 @@
-<button type="button" class="btn btn-primary col-2">Click Me!!!</button>
+<button
+  type="button"
+  class="btn btn-primary col-2 draggable-btn"
+  style="position: fixed"
+>
+  Click Me!!!
+</button>
