--- a/src/app/widgets/input/input.component.html
+++ b/src/app/widgets/input/input.component.html
@@ -1,8 +1,4 @@
-<div class="col-2">
-    <input
-    class="form-control"
-    placeholder="Enter the value"
-    name="dp"
-  />
+<div class="col-2" style="position: fixed">
+  <label>Label</label>
+  <input class="form-control" placeholder="Enter the value" name="dp" />
 </div>
-
