--- a/src/app/main-container/widgets-properties-sidenav/widgets-properties-sidenav.component.scss
+++ b/src/app/main-container/widgets-properties-sidenav/widgets-properties-sidenav.component.scss
@@ -19,7 +19,8 @@
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
-  background-color: lightgray;
+  background-color: white;
+  border-left: 1px solid lightgray;
   font-size: 16px;
   height: 100%;
 }
