--- a/src/app/widgets/button/button.component.html
+++ b/src/app/widgets/button/button.component.html
@@ -2,6 +2,7 @@
   type="button"
   class="btn btn-primary col-2 draggable-btn"
   style="position: fixed"
+  ngbTooltip="{{ tooltipText }}"
 >
-  Click Me!!!
+  {{ buttonText }}
 </button>
