--- a/src/app/widgets/input/input.component.html
+++ b/src/app/widgets/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="col-2" style="position: fixed">
+<div class="col-2" style="position: fixed" (click)="onClick($event)">
   <label>Label</label>
   <input class="form-control" placeholder="Enter the value" name="dp" />
 </div>
