--- a/src/app/widgets/button/button.component.html
+++ b/src/app/widgets/button/button.component.html
@@ -3,6 +3,7 @@
   class="btn btn-primary col-2 draggable-btn"
   style="position: fixed"
   ngbTooltip="{{ tooltipText }}"
+  (click)="onClick($event)"
 >
   {{ buttonText }}
 </button>
