--- a/src/app/widgets/typography/typography.component.html
+++ b/src/app/widgets/typography/typography.component.html
@@ -1,1 +1,1 @@
-<p style="position: fixed;cursor: move;">This is sample text</p>
+<p style="position: fixed;cursor: move;" (click)="onClick($event)">This is sample text</p>
